# FastAPI-To-do-System

./: .coverage  .env  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml
backend/: app.py  database.py  models.py  schemas.py  security.py  settings.py
backend/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 972bcd8566d2_create_users_table.py
tests/: conftest.py  factories.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
